2010-12-17  Francois Suter  <francois.suter@typo3.org>

	* Fixed bug #16751: Uninitialized variable triggers exception in Update wizard

2010-12-17  Jigal van Hemert <jigal@xs4all.nl>

	* Fixed bug #16724: List Module -> field selector: the table has a wrong background color in current trunk (thanks to Peter Foerger) 

2010-12-16  Jigal van Hemert <jigal@xs4all.nl>

	* Fixed bug #12661: Problem with german "Umlaute" in BE file list, no thumbs generated

2010-12-16  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #14402: XSS in Install tool (thanks to Benjamin Mack)
	* Fixed bug #16590: t3lib_TSparser::checkIncludeLines() does not check files to be included (thanks to Fabrizio Branca)
	* Fixed bug #15737: quoteStrForLike does not properly escape strings in sql_mode NO_BACKSLASH_ESCAPES
	* Fixed bug #16653: SQL injection problem in class.db_list.inc (thanks to Jigal van Hemert)
	* Fixed bug #15735: FORM content object is susceptible to XSS (thanks to Benjamin Mack)
	* Fixed bug #16362: Directory traversal attack in em_unzip
	* Fixed bug #16485: Cross-Site Scripting in showpic functionality
	* Fixed bug #16593: It is possible to bypass 'verifyFilenameAgainstDenyPattern'
	* Follow-up to bug #16593: Added unit tests

2010-12-06  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16657: Cleanup typo3pagemodule.js
	* Fixed bug #16646: help_aboutmoules hardcoded as start up module - returns error if uninstalled
	* Fixed bug #16644: Ext Direct error as popup appears after BE login
	* Update #16695: Update ExtJS to version 3.3.1

2010-12-06  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #16679: Cannot login to backend at the end of 1-2-3 wizard when using Oracle
	* Follow-up to #16444: 1-2-3 wizard dies when MySQL driver is not available

2010-12-05  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16574: PHP notices from XCLASS inclusions

2010-12-04  Stanislas Rolland  <typo3@sjbr.ca>
